<resources>
    <string name="app_name">Gestor-Inventario</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_almacen" translatable="false">Almacén</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cargando" translatable="false">cargando</string>
    <string name="usuariosActivos" translatable="false">USUARIOS ACTIVOS</string>
    <string name="powered_by" translatable="false">Powered by</string>
    <string name="imagen_del_producto" translatable="false">Imagen del producto</string>
    <string name="codigo_qr" translatable="false">Código QR</string>
    <string name="cantidad" translatable="false">Cantidad</string>
    <string name="nombre_del_producto" translatable="false">Nombre del producto</string>
    <string name="subir_foto" translatable="false">Subir Foto</string>
    <string name="activo" translatable="false">¿Activo?</string>
    <string name="escanear_qr" translatable="false">Escanear QR</string>
    <string name="leer_nfc" translatable="false">Leer NFC</string>
    <string name="tarea_por_hacer" translatable="false">Tarea por Hacer</string>
    <string name="descripcion_de_la_tarea" translatable="false">Descripción de la tarea</string>
    <string name="fecha_de_asignacion_yyyy_mm_dd" translatable="false">Fecha de asignación (YYYY-MM-DD)</string>
    <string name="crearNuevaTarea" translatable="false">CREAR</string>
    <string name="eliminarNuevaTarea" translatable="false">ELIMINAR</string>
    <string name="fecha_de_asignacion" translatable="false">Fecha de asignación</string>
    <string name="estado_de_la_tarea" translatable="false">Estado de la tarea</string>
    <string name="empleado_asignado" translatable="false">Empleado asignado</string>
    <string name="categoria_de_la_tarea" translatable="false">Categoría de la tarea</string>
    <string name="tareas_por_hacer" translatable="false">Tareas por Hacer</string>
    <string name="tareas_en_proceso" translatable="false">Tareas en Proceso</string>
    <string name="tareas_realizadas" translatable="false">Tareas Realizadas</string>
    <string name="iniciar_sesion" translatable="false">Iniciar Sesión</string>
    <string name="accede_a_tu_cuenta" translatable="false">Accede a tu cuenta</string>
    <string name="recordar" translatable="false">Recordar</string>
    <string name="olvidaste_la_contrasena" translatable="false">¿Olvidaste la contraseña?</string>
    <string name="email_o_contrasena_incorrectos" translatable="false">Email o contraseña incorrectos</string>
    <string name="existencias" translatable="false">EXISTENCIAS</string>
    <string name="menu_tarea">Tarea</string>
    <string name="clicar_tareas_por_hacer">Clicar tarea por hacer</string>
    <string name="clicar_tareas_en_proceso">Clicar Tareas en proceso</string>
    <string name="clicar_tareas_realizadas">Clicar Tareas Realizadas</string>







    <string name="menu_login" translatable="false">Login</string>
    <string name="todo">TODO</string>
    <string name="total_productos">TOTAL PRODUCTOS</string>
    <string name="textview">TextView</string>
    <string name="textviewexistencias">EXISTENCIAS</string>
    <string name="sinExistencias">SIN EXISTENCIAS</string>
    <string name="textview4" />
    <string name="cerrar_sesión">Cerrar sesión</string>

    <string name="registrarse">¿Registrarse?</string>
    <string name="formulario_de_registro">FORMULARIO DE REGISTRO</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre_completo">Nombre Completo</string>

    <string name="textviewproductos">TextViewProductos</string>
    <string name="textviewtotalproductos">TOTAL PRODUCTOS</string>
    <string name="menu_productos">Productos</string>
    <string name="anadir">Añadir</string>
    <string name="filtrar">filtrar</string>
    <string name="cantidad_maxima">cantidad</string>
    <string name="selecciona_categoria">selecciona una categoría</string>
    <string name="editar">editar</string>
    <string name="borrar">borrar</string>
    <string name="descripcion_producto">descripción del producto</string>
    <string name="total_usuarios">total_usuarios</string>
    <string name="torch_toggle">Alternar linterna</string>

    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="sin_existencias">Sin existencias</string>
    <string name="menu_estanterias">Estanterías</string>
    <string name="sin_estanterias">Sin estanterias</string>
    <string name="no_hay_productos">No hay productos</string>
    <string name="no_hay_estanterias">No hay estanterias</string>
    <string name="desasignar">desasignar</string>

    <string name="menu_productos_estanteria">Productos por estantería</string>
    <string name="asignar_productos">Asignar productos</string>
    <string name="no_hay_productos_disponibles">No hay productos disponibles</string>
    <string name="imagen_producto">Imagen</string>
    <string name="menu_productos_disponibles">Productos Disponibles</string>
    <string name="gestionar_usuarios">Gestionar usuarios</string>
    <string name="eliminar_usuario">Eliminar usuario</string>

    <string name="simple_spinner_item">simple_spinner_item</string>
    <string name="crear_nueva_tarea">Abrir Formulario</string>
    <string name="btnGuardarTarea">GUARDAR</string>

</resources>
