<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <!-- Home -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <!-- Almacén: debe llamarse nav_almacen -->
        <item
            android:id="@+id/nav_almacen"
            android:icon="@drawable/ic_store"
            android:title="@string/menu_almacen" />

        <!-- Productos genéricos: debe llamarse nav_productos -->
        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_products"
            android:title="@string/menu_productos" />

        <!-- Tareas -->
        <item
            android:id="@+id/tarea_fragment"
            android:icon="@drawable/ic_menu_tarea"
            android:title="@string/menu_tarea" />

    </group>
</menu>
