<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    android:elevation="4dp"
    tools:targetApi="21">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_de_la_tarea"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_de_la_tarea"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/empleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empleado_asignado"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/categoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categoria_de_la_tarea"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_de_asignacion"
            android:textSize="14sp" />


    </LinearLayout>

</androidx.cardview.widget.CardView>
