<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarea_por_hacer"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingBottom="16dp" />

        <!-- Descripción -->
        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_de_la_tarea"
            android:background="@android:drawable/edit_text"
            android:padding="10dp"
            android:layout_marginBottom="12dp" />

        <!-- Estado -->
        <Spinner
            android:id="@+id/spEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <!-- Empleado asignado -->
        <Spinner
            android:id="@+id/spEmpleadoAsignado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <!-- Categoría -->
        <Spinner
            android:id="@+id/spCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <!-- Fecha asignación -->
        <EditText
            android:id="@+id/etFechaAsignacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_de_asignacion_yyyy_mm_dd"
            android:inputType="date"
            android:layout_marginBottom="16dp" />

        <!-- Botones -->
        <Button
            android:id="@+id/btnGuardarTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardarTarea" />

        <Button
            android:id="@+id/btnEliminarTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminarNuevaTarea"
            android:backgroundTint="@android:color/holo_red_light"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            tools:targetApi="21" />
    </LinearLayout>
</ScrollView>
