<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <!-- Fragmento de Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.wul4.paythunder.gestorInventario.fragments.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login">

<!--         Acción para navegar a Home -->
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <!-- Fragmento de Home -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.wul4.paythunder.gestorInventario.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- Fragmento de Galería -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.wul4.paythunder.gestorInventario.fragments.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery">

        <action
            android:id="@+id/action_nav_gallery_self"
            app:destination="@id/nav_gallery" />
    </fragment>

    <!-- Fragmento de Almacén -->
    <fragment
        android:id="@+id/nav_almacenshow"
        android:name="com.wul4.paythunder.gestorInventario.fragments.almacen.AlmacenFragment"
        android:label="@string/menu_almacen"
        tools:layout="@layout/fragment_almacen">

        <action
            android:id="@+id/action_nav_almacenshow_self"
            app:destination="@id/nav_almacenshow" />
    </fragment>

    <!-- Fragmento de Tarea -->
    <fragment
        android:id="@+id/tarea_fragment"
        android:name="com.wul4.paythunder.gestorInventario.fragments.tareas.TareaFragment"
        android:label="@string/menu_tarea"
        tools:layout="@layout/fragment_tarea">
        <action
            android:id="@+id/action_tareaFragment_to_tareaHacerFragment"
            app:destination="@id/tareaHacerFragment" />

        <action
            android:id="@+id/action_tareaFragment_to_tareaProcesoFragment"
            app:destination="@id/tareaProcesoFragment" />

        <action
            android:id="@+id/action_tareaFragment_to_tareaRealizadaFragment"
            app:destination="@id/tareaRealizadaFragment" />
    </fragment>


    <fragment
        android:id="@+id/tareaHacerFragment"
        android:name="com.wul4.paythunder.gestorInventario.fragments.tareas.TareaHacerFragment"
        android:label="Tareas por Hacer"
        tools:layout="@layout/fragment_tarea_hacer" />
<!--        <action-->
<!--            android:id="@+id/action_tareaFragment_to_tareaHacerFragment"-->
<!--            app:destination="@id/tareaHacerFragment"-->
<!--            tools:ignore="DuplicateIds" />-->


    <fragment
        android:id="@+id/tareaProcesoFragment"
        android:name="com.wul4.paythunder.gestorInventario.fragments.tareas.TareaProcesoFragment"
        android:label="Tareas en Proceso"
        tools:layout="@layout/fragment_tarea_en_proceso" />
<!--        <action-->
<!--            android:id="@+id/action_tareaFragment_to_tareaProcesoFragment"-->
<!--            app:destination="@id/tareaProcesoFragment" />-->

    <fragment
        android:id="@+id/tareaRealizadaFragment"
        android:name="com.wul4.paythunder.gestorInventario.fragments.tareas.TareaRealizadaFragment"
        android:label="Tareas Realizadas"
        tools:layout="@layout/fragment_tarea_realizada" />
<!--        <action-->
<!--            android:id="@+id/action_tareaFragment_to_tareaRealizadaFragment"-->
<!--            app:destination="@id/tareaRealizadaFragment" />-->
</navigation>
